mobile spacing and instruction edit

--- a/index.html
+++ b/index.html
@@ -28,21 +28,22 @@
 
                 <ul>
                     <li>
-                        <p>You will be given a random number at the start of the game.</p>
+                        <p>You will be given a random number to match at the start of the game.</p>
                     </li>
                     <li>
                         <p>There are four crystals below. By clicking on a crystal you will add a specific amount of
-                            points to your total score.</p>
+                            points to your running total.</p>
                     </li>
                     <li>
-                        <p>You win the game by matching your total score to a random number. You lose the game if your
-                            total score goes above the random number.</p>
+                        <p>The value of each crystal is hidden from you until you click on it. You must identify it by how it changes your running total and then commit it to memory.</p>
                     </li>
                     <li>
-                        <p>The value of each crystal is hidden from you until you click on it.</p>
+                        <p>You win the game by matching your running total to the random number that you are trying to match. You lose the game if your
+                            total score goes above that same random number.</p>
                     </li>
+                    
                     <li>
-                        <p>Each time when the game starts, the game will change the values of each crystal.</p>
+                        <p>The value of each of the crystals will randomly change with the start of each turn.</p>
                     </li>
                 </ul>
 
