--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
-
+    <audio id="bgMusic">
+        <source src="assets/audio/Volume Alpha - 03 - Subwoofer Lullaby.mp3" type="audio/mpeg">
+        <source src="assets/audio/Volume Alpha - 03 - Subwoofer Lullaby.ogg" type="audio/ogg">
+    </audio>
 
     <div class="container-fluid">
         <div class="row">
