--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <Title>Crystal Finder Game</Title>
+    <Title>Minecraft Collector</Title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -27,8 +27,13 @@
             </div>
         </div>
         <div class="row">
+            <div id="btnWrap" class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                <button type="button" class="btn" id="instructionButton">Hide/Show Instructions</button>
+            </div>
+        </div>
+        <div class="row">
             <div id="instructions" class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-
+                    
                 <ul>
                     <li>
                         <p>You will be given a random number to match at the start of the game.</p>
