new instructions and labels

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <div class="row">
             <div id="title" class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                <h1 style="text-align: center">Minecraft Crystals Collector</h1>
+                <h1 style="text-align: center">Minecraft Resource Dispenser</h1>
             </div>
         </div>
         <div class="row">
@@ -36,22 +36,18 @@
                     
                 <ul>
                     <li>
-                        <p>You will be given a random number to match at the start of the game.</p>
+                        <p>You will be given a number to match, which represents the total weight of an order for resources that you need to fill. Your job is use the resources to collect the exact weight that the order asks for. </p>
                     </li>
                     <li>
-                        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of
-                            points to your running total.</p>
+                        <p>There are four resource items below. By clicking on a resource you will add a specific amount of
+                            weight to your bag.</p>
                     </li>
                     <li>
-                        <p>The value of each crystal is hidden from you until you click on it. You must identify it by how it changes your running total and then commit it to memory.</p>
+                        <p>The weight of each resource item is unknown until you click on it. You must identify its weight by the amount that it changes your total weight and then commit it to memory. It will remain the same until the next turn, then the weight of each resouce will be set to a new random number.</p>
                     </li>
                     <li>
-                        <p>You win the game by matching your running total to the random number that you are trying to match. You lose the game if your
-                            total score goes above that same random number.</p>
-                    </li>
-                    
-                    <li>
-                        <p>The value of each of the crystals will randomly change with the start of each turn.</p>
+                        <p>You win the game by filling your bag to the exact weight that the order asks for. You lose the game if your
+                            total weight goes above the weight that the order asks for.</p>
                     </li>
                 </ul>
 
