--- a/index.html
+++ b/index.html
@@ -22,31 +22,38 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div id="title" class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+            <div id="title" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <h1 style="text-align: center">Minecraft Resource Dispenser</h1>
             </div>
         </div>
         <div class="row">
-            <div id="btnWrap" class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+            <div id="btnWrap" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <button type="button" class="btn" id="instructionButton">Hide/Show Instructions</button>
             </div>
         </div>
         <div class="row">
-            <div id="instructions" class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                    
+            <div id="instructions" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
                 <ul>
                     <li>
-                        <p>You will be given a number to match, which represents the total weight of an order for resources that you need to fill. Your job is use the resources to collect the exact weight that the order asks for. </p>
+                        <p>You will be given a number to match, which represents the total weight of an order for
+                            resources that you need to fill. Your job is use the resources to collect the exact weight
+                            that the order asks for. </p>
                     </li>
                     <li>
-                        <p>There are four resource items below. By clicking on a resource you will add a specific amount of
+                        <p>There are four resource items below. By clicking on a resource you will add a specific
+                            amount of
                             weight to your bag.</p>
                     </li>
                     <li>
-                        <p>The weight of each resource item is unknown until you click on it. You must identify its weight by the amount that it changes your total weight and then commit it to memory. It will remain the same until the next turn, then the weight of each resouce will be set to a new random number.</p>
+                        <p>The weight of each resource item is unknown until you click on it. You must identify its
+                            weight by the amount that it changes your total weight and then commit it to memory. It
+                            will remain the same until the next turn, then the weight of each resouce will be set to a
+                            new random number.</p>
                     </li>
                     <li>
-                        <p>You win the game by filling your bag to the exact weight that the order asks for. You lose the game if your
+                        <p>You win the game by filling your bag to the exact weight that the order asks for. You lose
+                            the game if your
                             total weight goes above the weight that the order asks for.</p>
                     </li>
                 </ul>
@@ -54,31 +61,24 @@
             </div>
         </div>
 
-        <div class="row" style="height: 100px">
-            <div id="rGn" class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
+        <div class="row">
+            <div id="rGn" class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 
             </div>
-            <div id="winLose" class="col-xs-6 col-sm-6 col-md-6 col-lg-1">
-                <div class="row" id="wins">
+            <div id="winLose" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 
-                </div>
-                <div class="row" id="losses">
-
-                </div>
             </div>
-            <div id="playerTotalNum" class="col-xs-12 col-sm-12 col-md-12 col-lg-2">
-                <p> </p>
+            <div id="playerTotalNum" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+
             </div>
         </div>
-    </div>
 
-    </div>
-    <div class="row" style="margin: 10px">
+    <div class="row">
         <div id="crystalImages" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
         </div>
     </div>
-    </div>
+</div>
 
 </body>
 
